--- a/agents/pyproject.toml
+++ b/agents/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "langchain-openai>=1.1.10",
     "langgraph>=1.0.9",
+    "letta-client>=1.7.8",
     "openai>=2.21.0",
     "python-dotenv>=1.2.1",
 ]
